--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-custom-api": "^2.1.4",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-discourse-topic-list": "^0.0.2",
     "gatsby-transformer-sharp": "^2.3.13",
     "jsonp": "^0.2.1",
     "ldbutton": "^1.0.2",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
