--- a/package.json
+++ b/package.json
@@ -5,33 +5,39 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "@emotion/core": "^10.0.27",
-    "@emotion/styled": "^10.0.27",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@googlemaps/google-maps-services-js": "^2.6.1",
+    "@turf/projection": "^6.0.1",
+    "@types/ol": "^6.3.1",
+    "base-x": "^3.0.8",
     "date-fns": "^2.11.0",
+    "front-matter": "^3.2.1",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
-    "gatsby-plugin-emotion": "^4.1.22",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-custom-api": "^2.1.4",
-    "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-discourse-topic-list": "^0.0.2",
+    "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
+    "jquery": "^3.5.1",
     "jsonp": "^0.2.1",
     "ldbutton": "^1.0.2",
     "lodash": "^4.17.15",
+    "mapbox-gl": "^1.10.0",
+    "marked": "^1.1.0",
+    "ol": "^6.3.1",
+    "ol-ext": "^3.1.12",
+    "ol-mapbox-style": "^6.1.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "sanitize-html": "^1.22.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.88.2",
     "tachyons": "4.10.0"
   },
   "devDependencies": {
